# ITL

./: .travis.yml  CMakeLists.txt  COPYING  Makefile.am  NEWS  README  README.md  build.sh  configure.ac  libitl.pc.in
debian/: changelog  libitl-dev.install  rules
hijri/: README.md  demo_hijri.c  hijri.c  hijri.h  umm_alqura.c
libs/: AUTHORS  CMakeLists.txt  Makefile.am  README  autogen.sh  configure.ac  itl.pc.in
libs/debian/: control  copyright  libitl-dev.dirs  libitl-dev.docs  libitl-dev.examples
libs/hijri/: README  demo_hijri.c  hijri.h
libs/prayertime/: INSTALL  README  astro.h  demo_prayer.c  prayer.c  prayer.h
libs/prayertime/doc/: method-info.txt
libs/swig/: Makefile  perl-demo.pl
new_method/: CMakeLists.txt  LICENSE  Makefile.am  README.md  build.sh  config.c  config.h  prayer.c  prayer.h  testwrapper.sh
new_method/places/: ksa-mecca.conf  nld-eindhoven.conf
new_method/src/: config.c  config.h  defs.h  main.c  prayer.c
new_method/tests/: run_tests.py
new_method/tests/locations/: README.md
new_method/tests/locations/NL/: NL-Eindhoven.conf
new_method/tests/locations/SA/: SA-Mecca.conf
new_method/tests/reference_times/: SA-Mecca-20141129.json
ports/php/: README  config.m4  itl.c  itl.php  php_itl.h
prayertime/: README.md  astro.c  astro.h  demo_prayer.c  prayer.c  prayer.h
prayertime/doc/: method-info.md  method-info.txt
programs/akemsalatak/: .cvsignore  Makefile.am  Makefile.cvs  TODO  autogen.sh  configure.in
programs/akemsalatak/src/: Makefile.am  aboutwindow.cc  aboutwindow.h  akemsalatak.cc  cities.cc  gettextstr.h  kaba_gif_data.cc  logo_data.cc  mainwindow.cc  mainwindow.h  prayerengine.c  prayerengine.h  prefwindow.cc  prefwindow.h  quran.cc
programs/itools/: AUTHORS  COPYING  Makefile.in  NEWS  README  autogen.sh  config.h.in  configure  configure.in  ical.c  idate.c  ipraytime.c  ireminder
programs/itools/debian/: changelog  control  copyright  rules
programs/itools/doc/: ical.1  idate.1  ipraytime.1  ireminder.1
programs/minbar/: AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  TODO  acinclude.m4  autogen.sh  configure.ac  minbar.desktop.in
programs/minbar/data/: Locations.xml  Makefile.am  minbar-applet.server.in  minbar-applet.xml  minbar.ui  org.gnome.minbar.gschema.xml.in.in
programs/minbar/debian/: changelog  control  copyright  minbar-data.dirs  minbar-data.install  minbar.manpages  rules
programs/minbar/doc/: Makefile.am  minbar.1
programs/minbar/pixmaps/: Makefile.am
programs/minbar/pixmaps/icons/: Makefile.am
programs/minbar/pixmaps/icons/128x128/: Makefile.am
programs/minbar/pixmaps/icons/16x16/: Makefile.am
programs/minbar/pixmaps/icons/24x24/: Makefile.am
programs/minbar/pixmaps/icons/32x32/: Makefile.am
programs/minbar/pixmaps/icons/48x48/: Makefile.am
programs/minbar/pixmaps/icons/64x64/: Makefile.am
programs/minbar/po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  bs.po  es.po  fa.po  fr.po  id.po  no.po  ps.po  ru.po  tr.po  ur.po  ur_PK.po
programs/minbar/src/: Makefile.am  applet.c  config.c  config.h  defines.h  locations-xml.c  locations-xml.h  main.c  main.h
programs/namazTime/: Makefile.am  README  TODO  config.h  config.status  configure  configure.in  namaztime.glade  namaztime.gladep
programs/namazTime/autom4te.cache/: output.1  requests  traces.0  traces.1
programs/namazTime/po/: POTFILES
programs/namazTime/src/: Makefile.am  callbacks.c  callbacks.h  eggtrayicon.c  interface.c  interface.h  main.c  times.c  times.h
swig/: README  README.md  libitl.i
