# generated 2003/11/8 3:07:57 AST by msx@mylaptop.(none)
# using glademm V2.0.0
#
# newer (non customized) versions of this file go to Makefile.am_new
bin_PROGRAMS = akemsalatak

akemsalatak_SOURCES = \
	akemsalatak.cc

noinst_HEADERS = 

CXXFLAGS = @CXXFLAGS@ @GTKMM_CFLAGS@ 

akemsalatak_LDADD = @LIBS@ @GTKMM_LIBS@ 
